syntax = "proto3";

package scores;

service Scores {
    rpc GetAggregatedCategoryScores(TimeRangeRequest) returns (stream AggregateCategorydScoresResponse);
    rpc GetScoresByTicket(TimeRangeRequest) returns (stream ScoresByTicketResponse);
    rpc GetOverallQualityScore(TimeRangeRequest) returns (OverallQualityScoreResponse);
    rpc GetPeriodOverPeriodChange(PeriodComparisonRequest) returns (PeriodChangeResponse);  
}

message TimeRangeRequest {
    string startDate = 1;
    string endDate = 2;
}

message AggregateCategorydScoresResponse {
    message CategoryScoreByDate {
        string timeRange = 1;
        float score = 2;
    }

    int32 id = 1;
    string name = 2;
    int32 ratings = 3;
    float score = 4;
    repeated CategoryScoreByDate categoryScoreByDate = 5;
}

message ScoresByTicketResponse {
    message CategoryScore {
        string name = 1;
        float score = 2;
      }

      int32 ticketId = 1;
      repeated CategoryScore categoryScores = 2;    
}

message OverallQualityScoreResponse {
    double overallScore = 1;
    map<string, double> categoryBreakdowns = 2;
}

message PeriodComparisonRequest {
    string currentPeriodStart = 1;
    string currentPeriodEnd = 2;
    string previousPeriodStart = 3;
    string previousPeriodEnd = 4;
}

message PeriodChangeResponse {
    double overallScoreChange = 1;
    map<string, double> categoryScoreChanges = 2;
    bool isImprovement = 3;
  }
  
