// Original file: src/proto/scores.proto


export interface PeriodComparisonRequest {
  'currentPeriodStart'?: (string);
  'currentPeriodEnd'?: (string);
  'previousPeriodStart'?: (string);
  'previousPeriodEnd'?: (string);
}

export interface PeriodComparisonRequest__Output {
  'currentPeriodStart'?: (string);
  'currentPeriodEnd'?: (string);
  'previousPeriodStart'?: (string);
  'previousPeriodEnd'?: (string);
}
